# python-setup

./: .pre-commit-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
